force-app/main/default/objects/CCLDocument__c/CCLDocument__c.object-meta.xml
<CustomObject>
    <label>CCL Document</label>
    <nameField>
        <label>CCL Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCL Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>