force-app/main/default/objects/CCLDocument__c/fields/AppointmentLineItem__c.field-meta.xml
<CustomField>
    <fullName>AppointmentLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Line Item</label>
    <referenceTo>AppointmentLineItem__c</referenceTo>
    <relationshipLabel>CCL Documents</relationshipLabel>
    <relationshipName>CCL_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>