force-app/main/default/objects/CCLDocument__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <label>Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>