force-app/main/default/objects/CCLDocument__c/fields/ViewLink__c.field-meta.xml
<CustomField>
    <fullName>ViewLink__c</fullName>
    <label>View Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>